📱 Add Arianna Method APK - Complete Android app
- README.md: Technical documentation and architecture
- SOURCE.md: Source code location guide
- builds/ariannamethod-public_v1.apk: Public APK build
- source_for_build/: Complete Kotlin source code (33 files)
  - AppViewModel.kt: Chat state + API calls + SQLite persistence
  - AriannaAPIClient.kt: OpenAI/Anthropic API client + Vision API
  - AriannaDatabase.kt: SQLite with resonance logging (Agent Logic)
  - ChatView.kt: Black & white minimalist UI
  - MainActivity.kt: Key loading + camera integration
  - SettingsView.kt: Encrypted API key management
  - Theme.kt: Pure black & white Arianna theme
  - Custom icon: Broken heart with roots logo

Features: Infinite session, Vision API, Resonance Bus, Awakening ritual
Build variants: Debug (Oleg) + Public (universal with AMToken recognition)

--- a/.gitignore
+++ b/.gitignore
@@ -52,9 +52,9 @@ checkpoints/
 # Termux specific
 nohup.out
 
-# APK builds (NEVER commit - too large)
-*.apk
-*.aab
+# APK builds (NEVER commit - too large) - TEMPORARILY DISABLED FOR UPLOAD
+# *.apk
+# *.aab
 apk/*/build/
 apk/*/app/build/
 apk/*/.gradle/
